--- a/AcademicReward/PopUps/LoginPopUp.xaml
+++ b/AcademicReward/PopUps/LoginPopUp.xaml
@@ -2,95 +2,94 @@
                xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
                xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit" 
                x:Class="AcademicReward.PopUps.LoginPopUp"
-               CanBeDismissedByTappingOutsideOfPopup="False">
+               CanBeDismissedByTappingOutsideOfPopup="False"
+               Color="White">
     <StackLayout Margin="25">
         <StackLayout Orientation="Horizontal" Margin="0, 20">
-            <Button
-                Text="&lt;"
+            <ImageButton
+                Source="blueback.png"
+                WidthRequest="50"
+                HeightRequest="50"
                 Clicked="BackButtonClicked"
-                FontAttributes="Bold"
-                FontSize="25"
-                BorderColor="Black"
-                BorderWidth="2"
-                CornerRadius="0"
                 VerticalOptions="Start"
-                HorizontalOptions="Start"
-                Padding="12, 5"
-                Margin="10, 0"/>
-            <Frame BorderColor="Gray" CornerRadius="0" VerticalOptions="Center" HorizontalOptions="StartAndExpand">
+                Margin="10"/>
+            <Frame BorderColor="{StaticResource BlueButton}" VerticalOptions="Center" HorizontalOptions="StartAndExpand">
                 <Label
-                    Text="Create An Account"
+                    Text="Create Account"
                     FontSize="50"
                     FontAttributes="Bold"
-                    VerticalOptions="Center"/>
+                    VerticalOptions="Center"
+                    TextDecorations="Underline"/>
             </Frame>
         </StackLayout>
         <StackLayout Margin="10, 30">
             <Label
                 Text="Welcome!"
-                FontSize="38"/>
+                FontSize="40"/>
             <Label
                 Text="Please provide the information below to get started"
-                FontSize="18"
-                FontAttributes="Italic"/>
+                FontFamily="SecondaryFont"
+                FontSize="20"
+                FontAttributes="Italic"
+                TextColor="{StaticResource Gray600}"/>
         </StackLayout>
         <StackLayout Margin="10">
             <Label
-                Text="USERNAME: "
-                FontSize="20"
+                Text="Username: "
+                FontSize="22"
                 Margin="0, 5"
                 FontAttributes="Bold"
                 VerticalOptions="Center"/>
-            <Frame BackgroundColor="White" BorderColor="Gray" CornerRadius="0" Margin="0, 5">
-                <Entry FontSize="20" Placeholder="Username..." IsPassword="False"/>
+            <Frame BackgroundColor="{StaticResource Gray200}" BorderColor="{StaticResource Gray200}" Margin="0, 5">
+                <Entry FontSize="20" Placeholder="Username..." PlaceholderColor="{StaticResource Gray400}" IsPassword="False" BackgroundColor="{StaticResource Gray200}"/>
             </Frame>
             <Label
-                Text="PASSWORD: "
-                FontSize="20"
+                Text="Password: "
+                FontSize="22"
                 Margin="0, 5"
                 FontAttributes="Bold"
                 VerticalOptions="Center"/>
-            <Frame BackgroundColor="White" BorderColor="Gray" CornerRadius="0" Margin="0, 5">
-                <Entry FontSize="20" Placeholder="Password..." IsPassword="True"/>
+            <Frame BackgroundColor="{StaticResource Gray200}" BorderColor="{StaticResource Gray200}" Margin="0, 5">
+                <Entry FontSize="20" Placeholder="Password..." PlaceholderColor="{StaticResource Gray400}" IsPassword="True" BackgroundColor="{StaticResource Gray200}"/>
             </Frame>
             <Label
-                Text="RE-ENTER PASSWORD: "
-                FontSize="20"
+                Text="Re-enter Password: "
+                FontSize="22"
                 Margin="0, 5"
                 FontAttributes="Bold"
                 VerticalOptions="Center"/>
-            <Frame BackgroundColor="White" BorderColor="Gray" CornerRadius="0" Margin="0, 5">
-                <Entry FontSize="20" Placeholder="Re-enter Password..." IsPassword="True"/>
+            <Frame BackgroundColor="{StaticResource Gray200}" BorderColor="{StaticResource Gray200}" Margin="0, 5">
+                <Entry FontSize="20" Placeholder="Re-enter Password..." PlaceholderColor="{StaticResource Gray400}" IsPassword="True" BackgroundColor="{StaticResource Gray200}"/>
             </Frame>
         </StackLayout>
         <StackLayout Margin="10, 0" Orientation="Horizontal">
             <Label
-                Text="ACCOUNT TYPE: "
-                FontSize="20"
+                Text="Account Type: "
+                FontSize="22"
                 Margin="0, 5"
                 FontAttributes="Bold"
                 VerticalOptions="Center"/>
             <RadioButton 
                 Content="Admin"
-                FontSize="20"
+                FontSize="22"
                 VerticalOptions="Center"/>
             <Label
                 Text=" // "
-                FontSize="20"
+                FontSize="22"
+                FontFamily="BoldFont"
                 VerticalOptions="Center"/>
             <RadioButton
                 Content="Member"
-                FontSize="20"
+                FontSize="22"
                 VerticalOptions="Center"/>
         </StackLayout>
         <StackLayout VerticalOptions="EndAndExpand" HorizontalOptions="Center" Margin="10">
             <Button 
-                Text="SIGN UP" 
+                Text="Sign up" 
                 Clicked="SignUpButtonClicked"
                 FontSize="25"
-                BorderColor="Black"
-                BorderWidth="2"
-                CornerRadius="0"/>
+                FontFamily="BoldFont"
+                BorderColor="{StaticResource BlueButton}"/>
         </StackLayout>
     </StackLayout>
 </toolkit:Popup>
