--- a/AcademicReward/Views/TaskPage.xaml
+++ b/AcademicReward/Views/TaskPage.xaml
@@ -3,100 +3,120 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AcademicReward.Views.TaskPage"
              Title="Task">
-    <StackLayout Margin="20">
-        <StackLayout Orientation="Horizontal">
-            <Label 
-                Text="Notification:"
-                FontSize="45"
-                FontAttributes="Bold"
-                VerticalOptions="Center"
-                HorizontalOptions="Start"/>
-            <Button
-                Text="+"
-                Clicked="AddNotificationButtonClicked"
-                FontSize="40"
-                Padding="28, 12"
-                FontAttributes="Bold"
-                
-                BorderColor="Black"
-                BorderWidth="2"
-                CornerRadius="0"
-                VerticalOptions="Center"
-                HorizontalOptions="EndAndExpand"/>
-        </StackLayout>
-        <StackLayout Margin="0, 30">
-            <Frame BorderColor="Black" CornerRadius="0" Padding="0">
-                <ListView x:Name="NotificationList" SeparatorColor="Black" MaximumHeightRequest="300">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <ViewCell>
-                                <Grid>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="Auto"/>
-                                    </Grid.RowDefinitions>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Label 
-                                        Grid.Row="0" 
-                                        Grid.Column="0" 
-                                        Text="{Binding TestNotificationValue}"
-                                        FontSize="25"
-                                        Padding="5"
-                                        VerticalOptions="Center"/>
-                                </Grid>
-                            </ViewCell>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
+    <ScrollView>
+        <StackLayout Margin="20">
+            <Frame BorderColor="{StaticResource BlueButton}">
+                <StackLayout Orientation="Horizontal">
+                    <StackLayout Orientation="Vertical">
+                        <Label 
+                            Text="Notification:"
+                            FontSize="45"
+                            FontAttributes="Bold"
+                            TextDecorations="Underline"
+                            VerticalOptions="Center"
+                            HorizontalOptions="Start"/>
+                        <Label
+                            Text="Press the plus button to create a notification"
+                            FontFamily="SecondaryFont"
+                            FontSize="20"
+                            FontAttributes="Italic"
+                            TextColor="{StaticResource Gray600}"/>
+                    </StackLayout>
+                    <Button
+                        Text="+"
+                        Clicked="AddNotificationButtonClicked"
+                        FontSize="40"
+                        Padding="28, 12"
+                        FontAttributes="Bold"
+                        FontFamily="BoldFont"
+                        BorderColor="{StaticResource BlueButton}"
+                        VerticalOptions="Center"
+                        HorizontalOptions="EndAndExpand"/>
+                </StackLayout>
             </Frame>
-        </StackLayout>
-        <StackLayout Orientation="Horizontal">
-            <Label
-                Text="Task:"
-                FontSize="45"
-                FontAttributes="Bold"
-                VerticalOptions="Center"
-                HorizontalOptions="Start"/>
-            <Button
-                Text="+"
-                Clicked="AddTaskButtonClicked"
-                FontSize="40"
-                Padding="28, 12"
-                FontAttributes="Bold"
-                
-                BorderColor="Black"
-                BorderWidth="2"
-                CornerRadius="0"
-                VerticalOptions="Center"
-                HorizontalOptions="EndAndExpand"/>
-        </StackLayout>
-        <StackLayout Margin="0, 30">
-            <Frame BorderColor="Black" CornerRadius="0" Padding="0">
-                <ListView x:Name="TaskList" SeparatorColor="Black" MaximumHeightRequest="300">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <ViewCell>
-                                <Grid>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="*"/>
-                                    </Grid.RowDefinitions>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Label 
-                                        Grid.Row="0" 
-                                        Grid.Column="0" 
-                                        Text="{Binding TestTaskValue}"
-                                        FontSize="25"
-                                        Padding="5"
-                                        VerticalOptions="Center"/>
-                                </Grid>
-                            </ViewCell>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
+            <StackLayout Margin="0, 20">
+                <Frame BorderColor="Black" CornerRadius="0" Padding="0">
+                    <ListView x:Name="NotificationList" SeparatorColor="Black" MaximumHeightRequest="320">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <ViewCell>
+                                    <Grid>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="Auto"/>
+                                        </Grid.RowDefinitions>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*"/>
+                                        </Grid.ColumnDefinitions>
+                                        <Label 
+                                            Grid.Row="0" 
+                                            Grid.Column="0" 
+                                            Text="{Binding TestNotificationValue}"
+                                            FontSize="25"
+                                            Padding="5"
+                                            VerticalOptions="Center"/>
+                                    </Grid>
+                                </ViewCell>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </Frame>
+            </StackLayout>
+            <Frame BorderColor="{StaticResource BlueButton}">
+                <StackLayout Orientation="Horizontal">
+                    <StackLayout Orientation="Vertical">
+                        <Label 
+                            Text="Task:"
+                            FontSize="45"
+                            FontAttributes="Bold"
+                            TextDecorations="Underline"
+                            VerticalOptions="Center"
+                            HorizontalOptions="Start"/>
+                        <Label
+                            Text="Press the plus button to create a task"
+                            FontFamily="SecondaryFont"
+                            FontSize="20"
+                            FontAttributes="Italic"
+                            TextColor="{StaticResource Gray600}"/>
+                    </StackLayout>
+                    <Button
+                        Text="+"
+                        Clicked="AddTaskButtonClicked"
+                        FontSize="40"
+                        Padding="28, 12"
+                        FontAttributes="Bold"
+                        FontFamily="BoldFont"
+                        BorderColor="{StaticResource BlueButton}"
+                        VerticalOptions="Center"
+                        HorizontalOptions="EndAndExpand"/>
+                </StackLayout>
             </Frame>
+            <StackLayout Margin="0, 20">
+                <Frame BorderColor="Black" CornerRadius="0" Padding="0">
+                    <ListView x:Name="TaskList" SeparatorColor="Black" MaximumHeightRequest="320">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <ViewCell>
+                                    <Grid>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="*"/>
+                                        </Grid.RowDefinitions>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*"/>
+                                        </Grid.ColumnDefinitions>
+                                        <Label 
+                                            Grid.Row="0" 
+                                            Grid.Column="0" 
+                                            Text="{Binding TestTaskValue}"
+                                            FontSize="25"
+                                            Padding="5"
+                                            VerticalOptions="Center"/>
+                                    </Grid>
+                                </ViewCell>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </Frame>
+            </StackLayout>
         </StackLayout>
-    </StackLayout>
+    </ScrollView>
 </ContentPage>
