WL - More UI Work

--- a/AcademicReward/PopUps/AddShopItemPage.xaml
+++ b/AcademicReward/PopUps/AddShopItemPage.xaml
@@ -1,9 +1,10 @@
-<toolkit:Popup xmlns="http://schemas.microsoft.com/dotnet/2021/maui" 
-               xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-               xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit" 
-               x:Class="AcademicReward.PopUps.AddTaskPopUp"
-               CanBeDismissedByTappingOutsideOfPopup="False"
-               Color="White">
+<?xml version="1.0" encoding="utf-8" ?>
+<mct:Popup  xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+            xmlns:mct="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+            x:Class="AcademicReward.AddShopItemPage"
+            CanBeDismissedByTappingOutsideOfPopup="False"
+            Color="White">
     <StackLayout Margin="25">
         <StackLayout Orientation="Horizontal" Margin="0, 20">
             <ImageButton
@@ -15,40 +16,50 @@
                 Margin="10"/>
             <Frame BorderColor="{StaticResource BlueButton}" VerticalOptions="Center" HorizontalOptions="StartAndExpand">
                 <Label
-                    Text="Create Task"
+                    Text="Create Shop Item"
                     FontSize="50"
                     FontAttributes="Bold"
-                    TextDecorations="Underline"
-                    VerticalOptions="Center"/>
+                    VerticalOptions="Center"
+                    TextDecorations="Underline"/>
             </Frame>
         </StackLayout>
+
         <StackLayout Margin="10">
             <Label
-                Text="Title: "
+                Text="Item Name:"
                 FontSize="22"
                 Margin="0, 5"
                 FontAttributes="Bold"
                 VerticalOptions="Center"/>
             <Frame BackgroundColor="{StaticResource Gray200}" BorderColor="{StaticResource Gray200}" Margin="0, 5">
-                <Entry FontSize="20" Placeholder="Title Goes Here..." PlaceholderColor="{StaticResource Gray400}" BackgroundColor="{StaticResource Gray200}"/>
+                <Entry FontSize="20" Placeholder="Item Name..." PlaceholderColor="{StaticResource Gray400}" BackgroundColor="{StaticResource Gray200}"/>
             </Frame>
             <Label
-                Text="Description: "
+                Text="Item Description:"
                 FontSize="22"
                 Margin="0, 5"
                 FontAttributes="Bold"
                 VerticalOptions="Center"/>
             <Frame BackgroundColor="{StaticResource Gray200}" BorderColor="{StaticResource Gray200}" Margin="0, 5">
-                <Entry FontSize="20" Placeholder="Description Goes Here..." PlaceholderColor="{StaticResource Gray400}" BackgroundColor="{StaticResource Gray200}"/>
+                <Entry FontSize="20" Placeholder="Item Description..." PlaceholderColor="{StaticResource Gray400}" BackgroundColor="{StaticResource Gray200}"/>
             </Frame>
             <Label
-                Text="Points: "
+                Text="Item Cost:"
                 FontSize="22"
                 Margin="0, 5"
                 FontAttributes="Bold"
                 VerticalOptions="Center"/>
             <Frame BackgroundColor="{StaticResource Gray200}" BorderColor="{StaticResource Gray200}" Margin="0, 5">
-                <Entry FontSize="20" Placeholder="Points Go Here..." PlaceholderColor="{StaticResource Gray400}" BackgroundColor="{StaticResource Gray200}"/>
+                <Entry FontSize="20" Placeholder="Item Cost..." PlaceholderColor="{StaticResource Gray400}" BackgroundColor="{StaticResource Gray200}"/>
+            </Frame>
+            <Label
+                Text="Level Requirement:"
+                FontSize="22"
+                Margin="0, 5"
+                FontAttributes="Bold"
+                VerticalOptions="Center"/>
+            <Frame BackgroundColor="{StaticResource Gray200}" BorderColor="{StaticResource Gray200}" Margin="0, 5">
+                <Entry FontSize="20" Placeholder="Level Requirement..." PlaceholderColor="{StaticResource Gray400}" BackgroundColor="{StaticResource Gray200}"/>
             </Frame>
             <Label
                 Text="Group: "
@@ -75,12 +86,11 @@
         </StackLayout>
         <StackLayout VerticalOptions="EndAndExpand" HorizontalOptions="Center" Margin="10">
             <Button 
-                Text="Create" 
-                Clicked="CreateTaskButtonClicked"
+                Text="Add" 
+                Clicked="AddClicked"
                 FontSize="25"
                 FontFamily="BoldFont"
                 BorderColor="{StaticResource BlueButton}"/>
         </StackLayout>
     </StackLayout>
-</toolkit:Popup>
-    
+</mct:Popup>
