--- a/AcademicReward/PopUps/AddNotificationPopUp.xaml
+++ b/AcademicReward/PopUps/AddNotificationPopUp.xaml
@@ -2,6 +2,7 @@
                xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
                xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit" 
                x:Class="AcademicReward.PopUps.AddNotificationPopUp"
+               CanBeDismissedByTappingOutsideOfPopup="False"
                Color="White">
     <StackLayout Margin="25">
         <StackLayout Orientation="Horizontal" Margin="0, 20">
