--- a/AcademicReward/Views/ShopPage.xaml
+++ b/AcademicReward/Views/ShopPage.xaml
@@ -3,40 +3,81 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AcademicReward.Views.ShopPage"
              Title="Shop">
-    <VerticalStackLayout>
-        <Label 
-            Text="Shop"
-            FontSize="50"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-
-
-        
-            <Button ImageSource="shirt.png"
-                Clicked="Shirt_Clicked"
-                    WidthRequest="300"
-                    Scale=" 0.5" 
-                    MaximumHeightRequest="200" />
-
-            
-        <Button ImageSource="shopdemoticket.png"
-               Clicked="Ticket_Clicked" Scale="0.5"
-                   WidthRequest="300" MaximumHeightRequest="200" /> 
-
-
-
-
-
-            
-        
-        <Button
-                Text="Add Shop Item"
-                Clicked="Button_Clicked"    
-                FontSize="25"
-                Background="Gray"
-                BorderColor="Black"
-                BorderWidth="2"
-                CornerRadius="0"
-                Margin="0, 40"/>
-    </VerticalStackLayout>
+    <ScrollView>
+        <StackLayout Margin="25">
+            <Frame BorderColor="{StaticResource BlueButton}">
+                <StackLayout>
+                    <StackLayout Orientation="Horizontal">
+                        <StackLayout Orientation="Vertical">
+                            <Label
+                                Text="Shop:"
+                                FontSize="45"
+                                FontAttributes="Bold"
+                                TextDecorations="Underline"/>
+                            <Label
+                                Text="Press the plus button to create a new shop item"
+                                FontFamily="SecondaryFont"
+                                FontSize="20"
+                                FontAttributes="Italic"
+                                TextColor="{StaticResource Gray600}"/>
+                        </StackLayout>
+                        <Button
+                            Text="+"
+                            Clicked="Button_Clicked"
+                            FontSize="40"
+                            Padding="28, 12"
+                            FontAttributes="Bold"
+                            FontFamily="BoldFont"
+                            BorderColor="{StaticResource BlueButton}"
+                            VerticalOptions="Center"
+                            HorizontalOptions="EndAndExpand"/>
+                    </StackLayout>
+                </StackLayout>
+            </Frame>
+            <Frame BorderColor="Black" CornerRadius="0" Margin="0, 10">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Frame Margin="10" BorderColor="{StaticResource BlueButton}" Grid.Row="0" Grid.Column="0">
+                        <ImageButton 
+                            Grid.Row="0"
+                            Grid.Column="0"
+                            Source="shirt.png"
+                            Clicked="Shirt_Clicked"
+                            Scale="0.75"/>
+                    </Frame>
+                    <Frame Margin="10" BorderColor="{StaticResource BlueButton}" Grid.Row="0" Grid.Column="1">
+                        <ImageButton
+                        Grid.Row="0"
+                        Grid.Column="1"
+                        Source="shopdemoticket.png"
+                        Clicked="Ticket_Clicked"
+                        Scale="0.75"/>
+                    </Frame>
+                    <Frame Margin="10" BorderColor="{StaticResource BlueButton}" Grid.Row="1" Grid.Column="0">
+                        <ImageButton 
+                            Grid.Row="1"
+                            Grid.Column="0"
+                            Source="shopdemoticket.png"
+                            Clicked="Ticket_Clicked"
+                            Scale="0.75"/>
+                    </Frame>
+                    <Frame Margin="10" BorderColor="{StaticResource BlueButton}" Grid.Row="1" Grid.Column="1">
+                        <ImageButton
+                            Grid.Row="1"
+                            Grid.Column="1"
+                            Source="shirt.png"
+                            Clicked="Shirt_Clicked"
+                            Scale="0.75"/>
+                    </Frame>
+                </Grid>
+            </Frame>
+        </StackLayout>
+    </ScrollView>
 </ContentPage>
