--- a/AcademicReward/Views/GroupPage.xaml
+++ b/AcademicReward/Views/GroupPage.xaml
@@ -21,12 +21,31 @@
                         HorizontalOptions="Center"/>
                 </StackLayout>
             </Frame>
-            <Label
-                Text="Members:"
-                FontSize="32"
-                FontAttributes="Bold"
-                Margin="0, 10"
-                TextDecorations="Underline"/>
+            <StackLayout Margin="0, 10" Orientation="Horizontal">
+                <Label
+                    Text="Members:"
+                    FontSize="32"
+                    FontAttributes="Bold"
+                    Margin="0, 10"
+                    TextDecorations="Underline"
+                    VerticalOptions="Center"/>
+                <Label
+                    Text="Add Member:  "
+                    FontFamily="SecondaryFont"
+                    FontSize="24"
+                    TextColor="{StaticResource Gray600}"
+                    VerticalOptions="Center"
+                    HorizontalOptions="EndAndExpand"/>
+                <Button
+                    Text="+"
+                    Clicked="AddMemberButtonClicked"
+                    FontSize="30"
+                    Padding="18, 8"
+                    FontAttributes="Bold"
+                    FontFamily="BoldFont"
+                    BorderColor="{StaticResource BlueButton}"
+                    VerticalOptions="Center"/>
+            </StackLayout>
             <Frame CornerRadius="0" BorderColor="Black" Padding="0">
                 <ListView x:Name="MembersLV" ItemsSource="{Binding Members}" SeparatorColor="Black">
                     <ListView.ItemTemplate>
